force-app/main/default/objects/sked__Client_Availability__c/sked__Client_Availability__c.object-meta.xml
<CustomObject>
    <label>Client Availability</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Client Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>