force-app/main/default/objects/sked__Client_Availability__c/fields/sked__Account__c.field-meta.xml
<CustomField>
    <fullName>sked__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Availabilities</relationshipLabel>
    <relationshipName>Client_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>