force-app/main/default/objects/sked__Client_Availability__c/fields/sked__Contact__c.field-meta.xml
<CustomField>
    <fullName>sked__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Availabilities</relationshipLabel>
    <relationshipName>Client_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>