force-app/main/default/objects/sked__Client_Availability__c/fields/sked__Is_Available__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_Available__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Available</label>
    <type>Checkbox</type>
</CustomField>