force-app/main/default/objects/sked__Client_Availability__c/fields/sked__Preferred_End__c.field-meta.xml
<CustomField>
    <fullName>sked__Preferred_End__c</fullName>
    <description>The preferred End of appointment within the availability window</description>
    <label>Preferred End</label>
    <type>DateTime</type>
</CustomField>