force-app/main/default/objects/sked__Client_Availability__c/fields/sked__Preferred_Start__c.field-meta.xml
<CustomField>
    <fullName>sked__Preferred_Start__c</fullName>
    <description>The preferred Start of appointment within the availability window</description>
    <label>Preferred Start</label>
    <type>DateTime</type>
</CustomField>