force-app/main/default/objects/sked__Client_Availability__c/fields/sked__Recurring_Schedule__c.field-meta.xml
<CustomField>
    <fullName>sked__Recurring_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Schedule</label>
    <referenceTo>sked__Recurring_Schedule__c</referenceTo>
    <relationshipLabel>Client Availabilities</relationshipLabel>
    <relationshipName>Client_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>