force-app/main/default/objects/sked__Client_Availability__c/fields/sked_Is_All_Time_Preferred__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_All_Time_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is All Time Preferred</label>
    <type>Checkbox</type>
</CustomField>