force-app/main/default/objects/sked__Client_Availability__c/fields/sked_Service_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Client Availabilities</relationshipLabel>
    <relationshipName>sked_Client_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>