force-app/main/default/objects/sked__Client_Availability__c/validationRules/sked__Must_have_either_Account_or_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Must_have_either_Account_or_Contact</fullName>
    <active>true</active>
    <description>Account and Contact fields must not both be empty</description>
    <errorConditionFormula>AND( ISBLANK( sked__Account__c ) , ISBLANK( sked__Contact__c ) )</errorConditionFormula>
    <errorMessage>Account and Contact fields must not both be empty</errorMessage>
</ValidationRule>