force-app/main/default/objects/sked__Client_Availability__c/validationRules/sked__Start_must_be_before_End.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Start_must_be_before_End</fullName>
    <active>true</active>
    <errorConditionFormula>sked__Start__c  &gt;=  sked__End__c</errorConditionFormula>
    <errorMessage>Start must be before End</errorMessage>
</ValidationRule>