force-app/main/default/objects/sked__Client_Availability__c/validationRules/sked__Start_must_be_before_End_preferred.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__Start_must_be_before_End_preferred</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK(sked__Preferred_Start__c) ) , NOT( ISBLANK(sked__Preferred_End__c) ) , sked__Preferred_Start__c  &gt;=  sked__Preferred_End__c )</errorConditionFormula>
    <errorMessage>Preferred Start must be before Preferred End</errorMessage>
</ValidationRule>